--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ click = "^7.1.2"
 yfinance = "^0.1.54"
 joblib = "^0.16.0"
 tqdm = "^4.48.2"
+requests = "^2.24.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
